finished logo bar css

--- a/form-project/index.html
+++ b/form-project/index.html
@@ -9,19 +9,20 @@
         <title>Document</title>
     </head>
     <body>
-        <div class="side-bar">
+        <div class="sidebar">
             <div class="logo-bar">
-                <img src="crime-scene" alt="a crime scene" />
+                <img src="odin-lined.png" alt="Odin logo" />
+                <h1>Murder Corp</h1>
             </div>
         </div>
         <div class="content">
-            <h3>
+            <p class="page-title">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
                 dicta sequi, magnam repellendus ut quam accusantium
                 exercitationem delectus tempora maiores aut et magni! Commodi
                 nam debitis quas at dolorem a?
-            </h3>
-            <h3>You <i>know</i> you want to</h3>
+            </p>
+            <p class="page-title">You <i>know</i> you want to</p>
             <form action="" method="get">
                 <fieldset>
                     <legend>Let's do this!</legend>
