--- a/form-project/index.html
+++ b/form-project/index.html
@@ -16,13 +16,17 @@
             </div>
         </div>
         <div class="content">
-            <p class="page-title">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
-                dicta sequi, magnam repellendus ut quam accusantium
-                exercitationem delectus tempora maiores aut et magni! Commodi
-                nam debitis quas at dolorem a?
-            </p>
-            <p class="page-title">You <i>know</i> you want to</p>
+            <div class="page-title">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Sit dicta sequi, magnam repellendus ut quam accusantium
+                    exercitationem delectus tempora maiores aut et magni!
+                    Commodi nam debitis quas at dolorem a?
+                    <br />
+                    <br />
+                    You <i>know</i> you want to
+                </p>
+            </div>
             <form action="" method="get">
                 <fieldset>
                     <legend>Let's do this!</legend>
